[project]
name = "cats-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "huggingface-hub>=1.1.5",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sktime>=0.40.1",
    "statsmodels>=0.14.5",
    "streamlit>=1.52.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "xgboost>=3.1.2",
]

